--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -8,6 +8,7 @@
       <li><a href="{{ "/directionality.html" | relative_url }}">Directionality Test</a></li>
       <li><a href="{{ "/sparkler.html" | relative_url }}">Sparkler Plots</a></li>
       <li><a href="{{ "/function.html" | relative_url }}">Functional Classification</a></li>
+      <li><a href="{{ "/clustermap.html" | relative_url }}">Clustermap</a></li>
     </ul>
   </div>
 </nav>
