--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,9 +1,6 @@
+<link rel="stylesheet" href="{{"/assets/css/materialize.css" | relative_url}}" media="screen,projection">
 <script src="https://cdn.plot.ly/plotly-2.4.2.min.js"></script>
-<script src="{{ "/assets/js/main.js" | relative_url }}"></script>
-<!-- Compiled and minified CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script src="{{ "/assets/js/main.js" | relative_url }}"></script>
 <!-- From custom head -->
