Add intro in home page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo right">LUAD</a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
+    <a href="{{ "/" | relative_url }}"class="brand-logo left">LUAD</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href="{{ "/strength.html" | relative_url }}">Phenotype Replicability</a></li>
       <li><a href="{{ "/umap.html" | relative_url }}">UMAP</a></li>
       <li><a href="{{ "/impact.html" | relative_url }}">Impact Test</a></li>
